tanstack router wip

--- a/ui/tsconfig.app.json
+++ b/ui/tsconfig.app.json
@@ -22,7 +22,14 @@
 		"noUnusedParameters": true,
 		"erasableSyntaxOnly": true,
 		"noFallthroughCasesInSwitch": true,
-		"noUncheckedSideEffectImports": true
+		"noUncheckedSideEffectImports": true,
+
+		// Paths & Aliases
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./src/*"],
+			"@api/*": ["../api/src/*"]
+		}
 	},
 	"include": ["src"]
 }
