--- a/ui/package.json
+++ b/ui/package.json
@@ -11,12 +11,25 @@
 		"format": "prettier **/*.{ts,tsx,js,jsx,json,css,scss,html} --write"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.2.4",
+		"@tailwindcss/vite": "^4.1.18",
+		"@tanstack/react-router": "^1.157.2",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"hono": "^4.11.5",
+		"ky": "^1.14.2",
+		"lodash-es": "^4.17.23",
+		"lucide-react": "^0.563.0",
 		"react": "^19.2.0",
-		"react-dom": "^19.2.0"
+		"react-dom": "^19.2.0",
+		"tailwind-merge": "^3.4.0",
+		"tailwindcss": "^4.1.18"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.1",
-		"@types/node": "^24.10.1",
+		"@tanstack/router-plugin": "^1.157.2",
+		"@types/lodash-es": "^4.17.12",
+		"@types/node": "^24.10.9",
 		"@types/react": "^19.2.5",
 		"@types/react-dom": "^19.2.3",
 		"@vitejs/plugin-react": "^5.1.1",
@@ -30,6 +43,7 @@
 		"prettier-plugin-merge": "^0.9.0",
 		"prettier-plugin-sort-imports": "^1.8.9",
 		"prettier-plugin-tailwindcss": "^0.7.2",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.46.4",
 		"vite": "^7.2.4"
