--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,8 @@
 		"format": "prettier **/*.{ts,tsx,js,jsx,json,css,scss,html} --write"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.2.2",
+		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
 		"@tailwindcss/vite": "^4.1.18",
 		"@tanstack/react-router": "^1.157.2",
@@ -22,8 +24,10 @@
 		"lucide-react": "^0.563.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"react-hook-form": "^7.71.1",
 		"tailwind-merge": "^3.4.0",
-		"tailwindcss": "^4.1.18"
+		"tailwindcss": "^4.1.18",
+		"zod": "^4.3.6"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.1",
