--- a/api/package.json
+++ b/api/package.json
@@ -32,8 +32,11 @@
 		"typescript": "^5.9.3"
 	},
 	"dependencies": {
+		"@ai-sdk/google": "3.0.30",
+		"@google/genai": "1.42.0",
 		"@hono/node-server": "^1.19.9",
 		"@hono/zod-validator": "^0.7.6",
+		"ai": "6.0.97",
 		"dotenv": "^17.2.3",
 		"drizzle-orm": "^0.45.1",
 		"hono": "^4.11.5",
