minor fixes to compile UI

--- a/ui/tsconfig.node.json
+++ b/ui/tsconfig.node.json
@@ -17,8 +17,7 @@
 		/* Linting */
 		"strict": true,
 		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"erasableSyntaxOnly": true,
+		"noUnusedParameters": false,
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedSideEffectImports": true
 	},
