--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
 		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
 		"@tailwindcss/vite": "^4.1.18",
+		"@tanstack/react-query": "^5.90.21",
 		"@tanstack/react-router": "^1.157.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
